@@ -16,7 +16,7 @@ public class OpenAiApiFunctionsWithStreamExample {
         String token = System.getenv("OPENAI_TOKEN");
         OpenAiService service = new OpenAiService(token);
 
-        FunctionExecutor functionExecutor = new FunctionExecutor(List.of(ChatFunction.builder()
+        FunctionExecutor functionExecutor = new FunctionExecutor(Collections.singletonList(ChatFunction.builder()
                 .name("get_weather")
                 .description("Get the current weather of a location")
                 .executor(Weather.class, w -> new WeatherResponse(w.location, w.unit, new Random().nextInt(50), "sunny"))
